# drawing-qa

./: .gitignore  Dockerfile  README.md  docker-compose.yml  drawing_qa.py  example.py  pyproject.toml
docs/: README.md
tests/: __init__.py  test_drawing_qa.py
