[project]
name = "drawing-qa"
version = "0.1.0"
description = "Ask questions about PDF drawings using ColPali visual understanding"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Cary Greenwood"}
]
keywords = ["colpali", "pdf", "drawings", "visual-qa", "construction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.0.0",
    "colpali-engine>=0.2.0",
    "chromadb>=0.4.0",
    "pdf2image>=1.16.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
]
llm = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
]
all = [
    "drawing-qa[viz,server,llm]",
]

[project.scripts]
drawing-qa = "drawing_qa:main"

[project.urls]
Repository = "https://github.com/carygreenwood/drawing-qa"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
